# weather-dome

./: .env.example  .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/models/: impact.py  outage.py  weather.py
backend/app/routers/: dashboard.py  impact.py  outage.py  territory.py  weather.py
backend/app/schemas/: dashboard.py  impact.py  outage.py  weather.py
backend/app/services/: calibration.py  coned_client.py  coned_scraper.py  crew_deployment.py  dsny_salt_client.py  equipment_stress.py  impact_engine.py  job_forecast.py  load_forecast.py  melt_risk.py  nws_client.py  ny511_winter_client.py  nyc311_client.py  ods_client.py  outage_ingest.py  outage_risk.py  owm_client.py  plownyc_client.py  poweroutage_us_client.py  salt_treatment.py  snow_tracker.py  vegetation_risk.py  visual_crossing_client.py  weather_aggregator.py  weather_ingest.py
backend/app/tasks/: scheduler.py
backend/app/territory/: definitions.py
backend/scripts/: run_calibration.sh
backend/tests/: test_api.py  test_impact_models.py  test_outage_models.py  test_salt_treatment.py
data/: coned_territory.geojson  nws_zones.json  or_territory.geojson
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/admin/: OutageOverridePanel.tsx
frontend/src/hooks/: useWeatherData.ts
scripts/: healthcheck.sh  scrape_coned_outages.mjs
(+14 files in other folders)
